.k8s/maintainance-console.yaml
apiVersion: v1
kind: Pod
metadata:
  name: terminal
spec:
  containers:
  - name: terminal
    image: basilmawejje/rails-events:v1
    resources:
            requests:
              memory: 150Mi
              cpu: 50m
            limits:
              memory: 250Mi
              cpu: 100m
