.k8s/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
      - env:
        - name: COMPOSE_PROJECT_NAME
          value: rails-events
        - name: DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL
          value: "true"
        - name: PUBLISHABLE_KEY
          value: env["PUBLISHABLE_KEY"]
        - name: SECRET_KEY
          value: env["SECRET_KEY"]
        - name: gmail_password
          value: env['gmail_password']
        - name: gmail_username
          value: env['gmail_username']
        image: postgres:10.3-alpine
        name: postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
      restartPolicy: Always
      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres
status: {}
