.k8s/sidekiq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: sidekiq
  name: sidekiq
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: sidekiq
    spec:
      containers:
      - args:
        - sidekiq
        image: basilmawejje/rails-events:v1
        name: sidekiq
        resources: {}
        volumeMounts:
        - mountPath: /app
          name: sidekiq-claim0
      restartPolicy: Always
      volumes:
      - name: sidekiq-claim0
        persistentVolumeClaim:
          claimName: sidekiq-claim0
status: {}
