.k8s/rails-events-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-events-app
spec:
  selector:
    matchLabels:
      app: rails-events-app
  replicas: 1
  template:
    metadata:
      labels:
        app: rails-events-app
    spec:
      containers:
        - name: rails-events-app
          image: basilmawejje/rails-events:v1
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 500Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: rails-events-app
spec:
  selector:
    app: rails-events-app
  ports:
    - name: http
      port: 80
  type: ClusterIP
